fixed overlay z-index

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -132,6 +132,7 @@ body:not(.overlay-header) #site-header {
 	background: #00519e;
 	width: 100%;
 	min-height: 40px;
+  z-index: 99!important;
 }
 
 .cintillo {
